# tradezero-sdk

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  README.md  SECURITY.md  TRADEZERO_API.md  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: basic_async.py  basic_sync.py
tests/: conftest.py  test_accounts.py  test_all.py  test_async.py  test_exceptions.py  test_locates.py  test_positions.py  test_retry.py  test_trading.py
tests/live/: conftest.py  test_accounts.py  test_errors.py  test_locates.py  test_positions.py  test_trading.py
tradezero/: __init__.py  config.py  enums.py  exceptions.py
tradezero/client/: __init__.py  async_client.py  sync_client.py
tradezero/http/: __init__.py  _base.py  _retry.py  async_http.py  sync_http.py
tradezero/models/: __init__.py  accounts.py  locates.py  orders.py  positions.py
tradezero/modules/: __init__.py  accounts.py  locates.py  positions.py  trading.py
