[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tradezero-sdk"
version = "1.0.1"
description = "A production-ready Python SDK for the TradeZero REST API."
authors = ["Shady Emad <ShadyEmadContact@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/shadyemad/tradezero-sdk"
repository = "https://github.com/shadyemad/tradezero-sdk"
keywords = ["tradezero", "trading", "sdk", "api", "finance", "stocks"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
packages = [{ include = "tradezero" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.27,<0.28"
pydantic = "^2.7"
tenacity = "^8.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
respx = "^0.21"
ruff = "^0.4"
mypy = "^1.10"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["tradezero"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
